syntax = "proto3";

package tieba;

import "BawuThrones.proto";
import "BazhuSign.proto";
import "BirthdayInfo.proto";
import "GodInfo.proto";
import "Icon.proto";
import "LikeForumInfo.proto";
import "NewGodInfo.proto";
import "UserPics.proto";
import "PrivSets.proto";
import "SimpleUser.proto";

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message User {
  int32 is_login = 1;
  int64 id = 2;
  string name = 3;
  string nameShow = 4;
  string portrait = 5;
  int32 no_un = 6;
  int32 type = 7;
  int32 userhide = 9;
  int32 is_manager = 11;
  string rank = 12;
  string bimg_url = 13;
  int32 meizhi_level = 14;
  int32 is_verify = 15;
  int32 is_interestman = 16;
  repeated Icon iconinfo = 17;
  int32 user_type = 19;
  int32 is_coreuser = 20;
  int32 is_huinibuke = 21;
  string ios_bimg_format = 22;
  int32 level_id = 23;
  int32 is_like = 24;
  int32 is_bawu = 25;
  string bawu_type = 26;
  string portraith = 27;
  string ip = 28;
  string BDUSS = 29;
  int32 fans_num = 30;
  int32 concern_num = 31;
  int32 sex = 32;
  int32 my_like_num = 33;
  string intro = 34;
  int32 has_concerned = 35;
  string passwd = 36;
  int32 post_num = 37;
  string tb_age = 38;
  int32 is_mem = 39;
  int32 bimg_end_time = 40;
  int32 gender = 42;
  int32 is_mask = 43;
  repeated UserPics user_pics = 44;
  PrivSets privSets = 45;
  int32 is_friend = 46;
  repeated LikeForumInfo likeForum = 47;
  int32 gift_num = 49;
  int32 is_select_tail = 51;
  int32 is_guanfang = 52;
  int32 bookmark_count = 53;
  int32 bookmark_new_count = 54;
  repeated SimpleUser mute_user = 55;
  int64 friend_num = 56;
  string fansNickname = 57;
  string bg_pic = 58;
  GodInfo god_data = 62;
  int32 heavy_user = 63;
  int32 visitor_num = 75;
  int32 total_visitor_num = 76;
  int32 nickname_update_time = 86;
  int32 thread_num = 87;
  int32 agree_num = 88;
  int32 left_call_num = 89;
  int32 is_invited = 90;
  int32 is_fans = 91;
  int32 priv_thread = 92;
  int32 is_videobiggie = 93;
  int32 is_show_redpacket = 94;
  BirthdayInfo birthday_info = 96;
  int32 can_modify_avatar = 97;
  string modify_avatar_desc = 98;
  int32 influence = 99;
  string level_influence = 100;
  optional NewGodInfo new_god_data = 101;
  BawuThrones bawu_thrones = 103;
  BazhuSign bazhu_grade = 105;
  int32 isDefaultAvatar = 106;
  int32 favorite_num = 109;
  uint32 total_agree_num = 118;
  string tieba_uid = 120;
  string level_name = 125;
  string ip_address = 127;
  int32 is_nickname_editing = 128;
  string editing_nickname = 129;
  string display_intro = 138;
  repeated string new_icon_url = 139;
  string dynamic_url = 140;
}